--- a/dpaste.yaml
+++ b/dpaste.yaml
@@ -32,6 +32,7 @@ parameters:
     type: string
   image:
     type: string
+    default: ubuntu-trusty-amd64-0.1.0-2014073016
   public_net_id:
     type: string
     description: >
