--- a/dpaste-new-neutron-env.yaml
+++ b/dpaste-new-neutron-env.yaml
@@ -164,28 +164,18 @@ resources:
       - name: root_password
       - name: username
       - name: password
-      - name: host
+      - name: allowed_hosts
+        default: '10.0.0.%'
       outputs:
       - name: result
       config: |
         # TODO, break this out into its own SoftwareConfig
-        class { '::mysql::server':
+        class { 'm::mysql::allinone':
           root_password     => $::root_password,
-          restart           => true,
-          override_options  => {
-            'mysqld' => {
-              'bind-address' => '0.0.0.0',
-            }
-          }
-        }
-
-        ::mysql::db { $::db_name:
-          user     => $::username,
-          password => $::password,
-          host     => $::host,
-          # TODO, figure out how to pass this as a param. Unicode formating is breaking things.
-          # The list looks like [u'SELECT', u'UPDATE', ...] and puppet doesn't like that.
-          grant    => ['ALL']
+          db_name           => $::db_name,
+          user              => $::username,
+          password          => $::password,
+          allowed_hosts     => $::allowed_hosts,
         }
 
   # In the following SoftwareDeployment we are applying the SoftwareConfig resource
@@ -231,8 +221,8 @@ resources:
           get_attr: [app_config_deployment, db_username]
         password:
           get_attr: [app_config_deployment, db_password]
-        host:
-          get_attr: [app_config_deployment, db_allowed_hosts]
+        #allowed_hosts:
+          #get_attr: [app_config_deployment, db_allowed_hosts]
 
 
   # The following resources are configuring and deploying an apache web server instance in a similar
@@ -286,36 +276,12 @@ resources:
       outputs:
       - name: result
       config: |
-        class {
-          'apache':
-            default_mods        => true,
-            default_confd_files => false;
-          'apache::mod::wsgi':
-            wsgi_socket_prefix => '/var/run/wsgi';
+        class {'m::apache::python_vhost':
+          vhost_name    => $::vhost_name,
+          install_root => $::install_root,
+          wsgi_path    => $::wsgi_path,
+          static_root  => $::static_root,
         }
-
-        apache::vhost { "$::vhost_name":
-          port                        => '80',
-          default_vhost               => true,
-          aliases                     => [
-            # TODO, what do do about this? What if an app doesn't need this?
-            {alias => '/static', path => $::static_root}
-          ],
-          docroot                     => "$::install_root",
-          wsgi_application_group      => '%{GLOBAL}',
-          wsgi_daemon_process         => 'wsgi',
-          wsgi_daemon_process_options => {
-            processes    => '2',
-            threads      => '15',
-            display-name => '%{GROUP}',
-          },
-          wsgi_import_script          => "$::wsgi_path",
-          wsgi_import_script_options  =>
-            { process-group => 'wsgi', application-group => '%{GLOBAL}' },
-          wsgi_process_group          => 'wsgi',
-          wsgi_script_aliases         => { '/' => "$::wsgi_path" },
-        }
-
 
   # Deploy the apache configuration onto the web_server instance resource
   apache_deployment:
@@ -343,10 +309,7 @@ resources:
       outputs:
       - name: result
       config: |
-        include mysql::client
-        class { 'mysql::bindings':
-          python_enable => true
-        }
+        include ::m::mysql::python_client
 
   # Installing (or deploying) the mysql_client_config onto the defined web_server instance resource.
   mysql_client_deployment:
@@ -383,7 +346,7 @@ resources:
         - name: db_root_password
         - name: db_username
         - name: db_password
-        - name: db_allowed_hosts
+        #- name: db_allowed_hosts
 
         # apache specific data
         - name: apache_vhost_name
@@ -403,7 +366,7 @@ resources:
         - name: db_root_password
         - name: db_username
         - name: db_password
-        - name: db_allowed_hosts
+        #- name: db_allowed_hosts
 
         # apache specific data
         - name: apache_vhost_name
@@ -432,7 +395,7 @@ resources:
         stash_config db_root_password
         stash_config db_username
         stash_config db_password
-        stash_config db_allowed_hosts
+        #stash_config db_allowed_hosts
 
         stash_config apache_vhost_name
         stash_config apache_install_root
@@ -460,7 +423,7 @@ resources:
         db_name: dpaste
         db_username: dpaste
         db_password: anothersillypassword
-        db_allowed_hosts: 10.0.0.%
+        #db_allowed_hosts: 10.0.0.%
 
         apache_vhost_name: dpaste
         apache_install_root: /var/www/dpaste
@@ -538,6 +501,9 @@ outputs:
   web_stdout:
     value:
       get_attr: [apache_deployment, deploy_stdout]
+  web_result:
+    value:
+      get_attr: [apache_deployment, result]
   web_stderr:
     value:
       get_attr: [apache_deployment, deploy_stderr]
