--- a/dpaste-new-neutron-env.yaml
+++ b/dpaste-new-neutron-env.yaml
@@ -22,7 +22,7 @@ parameters:
     default: m1.medium
   image:
     type: string
-    default: ubuntu-trusty-amd64-0.1.0-2014073016
+    default: ubuntu-trusty.amd64-0.3.0.2014080707
 
   # Network parameters. These should all have sane defaults
   public_net_id:
@@ -238,10 +238,8 @@ resources:
   web_port:
     type: OS::Neutron::Port
     properties:
-      #network_id: { get_param: private_net_id }
       network_id: { get_resource: private_net }
       fixed_ips:
-        #- subnet_id: { get_param: private_subnet_id }
         - subnet_id: { get_resource: private_subnet }
       security_groups:
         - { get_resource: secgroup-internal }
